--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,96 @@
-.container {
-  padding: 0 2rem;
+.content_container{
+  padding: 10px 20px;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+.content_container h1{
+  font-size: 28px;
+}
+.remote{
+  position: fixed;
+  top: 10px;
+  margin-right: 10px;
+}
+.selected{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 80%;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+.selected p{
+  font-size: 25px;
+  margin-left: 7px;
+}
+.admin{
+  position: fixed;
+  bottom:0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+}
+.setting{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 400px;
+  height: 400px;
+  background-color: white;
+}
+.close{
+  color: red;
+  font-size: 20px;
+  padding: 2px;
+  font-weight: bold;
+}
+.setting h1{
+  padding: 10px;
+  border: 1px solid black;
+  width: 40px;
+  margin-top: 10px;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+
+
+.dialog{
+  position: fixed;
+  top: 10px;
+  margin-right: 10px;
+  padding: 200px 0;
+  background-color: #999;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.input{
+  width: 200px;
+  padding: 10px 20px;
+  height: 50px;
+  font-size: 60px;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.button{
+  padding: 40px 30px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 20px;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.button2{
+  padding: 40px 30px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 20px;
+  margin-left: 15px;
 }
